@@ -4,13 +4,13 @@
 #--------------------------------------------------
 # TEZ DAG plan: pig-0_scope-0
 #--------------------------------------------------
-Tez vertex scope-18	->	Tez vertex scope-20,
-Tez vertex scope-19	->	Tez vertex scope-20,
-Tez vertex scope-20
+Tez vertex scope-18	->	Tez vertex group scope-24,
+Tez vertex scope-19	->	Tez vertex group scope-24,
+Tez vertex group scope-24
 
 Tez vertex scope-18
 # Plan on vertex
-POValueOutputTez - scope-22	->	 [scope-20]
+c: Store(file:///tmp/pigoutput:org.apache.pig.tez.TestTezCompiler$TestDummyStoreFuncParallelWriteEnabled) - scope-25	->	 scope-17
 |
 |---a: New For Each(false,false)[bag] - scope-7
     |   |
@@ -25,7 +25,7 @@ POValueOutputTez - scope-22	->	 [scope-20]
     |---a: Load(file:///tmp/input:org.apache.pig.builtin.PigStorage) - scope-0
 Tez vertex scope-19
 # Plan on vertex
-POValueOutputTez - scope-23	->	 [scope-20]
+c: Store(file:///tmp/pigoutput:org.apache.pig.tez.TestTezCompiler$TestDummyStoreFuncParallelWriteEnabled) - scope-26	->	 scope-17
 |
 |---c: New For Each(false,false)[bag] - scope-15
     |   |
@@ -38,8 +38,5 @@ POValueOutputTez - scope-23	->	 [scope-20]
     |   |---Project[bytearray][0] - scope-12
     |
     |---b: Load(file:///tmp/input:org.apache.pig.builtin.PigStorage) - scope-8
-Tez vertex scope-20
-# Plan on vertex
-c: Store(file:///tmp/pigoutput:org.apache.pig.tez.TestTezCompiler$TestDummyStoreFuncParallelWriteDisabled) - scope-17
-|
-|---POShuffledValueInputTez - scope-21	<-	 [scope-18, scope-19]
+Tez vertex group scope-24	<-	 [scope-18, scope-19]	->	 null
+# No plan on vertex group
